New entries should be added at the top

2005-07-24 backend_gtk.py: modify print_figure() use own pixmap, fixing 
           problems where print_figure() overwrites the display pixmap. 
	   return False from all button/key etc events - to allow the event
           to propagate further - SC

2005-07-23 backend_gtk.py: change expose_event from using set_back_pixmap();
           clear() to draw_drawable() - SC

2005-07-23 backend_gtk.py: removed pygtk.require()
           matplotlib/__init__.py: delete 'FROZEN' and 'MPLError' which are 
           no longer used - SC

2005-07-22 backend_gdk.py: removed pygtk.require() - SC

2005-07-21 backend_svg.py: Remove unused imports. Remove methods doc strings
           which just duplicate the docs from backend_bases.py. Rename
           draw_mathtext to _draw_mathtext. - SC

2005-07-17 examples/embedding_in_gtk3.py: new example demonstrating placing
           a FigureCanvas in a gtk.ScrolledWindow - SC

2005-07-14 Fixed a Windows related bug (#1238412) in texmanager - DSD

2005-07-11 Fixed color kwarg bug, setting color=1 or 0 caused an 
		   exception - DSD

2005-07-07 Added Eric's MA set_xdata Line2D fix - JDH

2005-07-06 Made HOME/.matplotlib the new config dir where the
           matplotlibrc file, the ttf.cache, and the tex.cache live.
           The new default filenames in .matplotlib have no leading
           dot and are not hidden.  Eg, the new names are matplotlibrc
           tex.cache ttffont.cache.  This is how ipython does it so it
           must be right.  If old files are found, a warning is issued
           and they are moved to the new location.  Also fixed
           texmanager to put all files, including temp files in
           ~/.matplotlib/tex.cache, which allows you to usetex in
           non-writable dirs.

2005-07-05 Fixed bug #1231611 in subplots adjust layout.  The problem
           was that the text cacheing mechanism was not using the
           transformation affine in the key. - JDH
